Revert "fix issue where hamburger overlaps name"
This reverts commit 9fcb25f1a3cc44db66d40305193aafec510a577c.

--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -20,18 +20,12 @@ div#landingPage {
 }
 div#mainHeadingHorizontal {
     background-color: rgba(200, 200, 200, 0.7);
-    width: auto;
-    max-width: calc(100% - 9.9vh - 1.5%);
+    width: 30%;
     height: 9.9%;
     position: absolute;
     top: 2%;
-    right: calc(9.9vh + 1%);
+    right: 0.5%;
     border-radius: 10px;
-    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    padding: 0 16px;
-    white-space: nowrap;
 }
 div#mainHeadingVertical {
     background-color: rgba(200, 200, 200, 0.7);
@@ -42,18 +36,20 @@ div#mainHeadingVertical {
     left: 50%;
     border-radius: 15px;
     text-align: center;
-    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.5);
 }
 h1#name{
-  position: static;
+  position: absolute;
+  left: 4%;
+  top: calc(50% - 1.85vh);
   font-size: 3.7vh;
-  margin: 0;
+  margin-top: 0%;
+  margin-bottom: 0%;
 }
 i#hamburger{
-  position: fixed;
-  top: 2vh;
-  right: 0.5%;
+  position: sticky;
   background-color: rgb(255, 255, 255, 0.6);
+  left: calc(99.5% - 9.9vh);
+  top: 2vh;
   padding: 0;
   width: 9.9vh;
   height: 9.9vh;
@@ -62,8 +58,6 @@ i#hamburger{
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 50;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.5);
 }
 
 div#mainInfo{
@@ -345,19 +339,20 @@ div#end.container::after {
   /* Reposition name heading to center of screen */
   div#mainHeadingHorizontal {
     width: 80%;
-    max-width: 80%;
     height: auto;
     top: 40%;
     left: 10%;
     right: auto;
     border-radius: 15px;
     text-align: center;
-    padding: 10px 20px;
-    justify-content: center;
+    background-color: rgba(200, 200, 200, 0.7);
   }
 
   h1#name {
+    position: static;
     font-size: 5vw;
+    margin: 0;
+    padding: 10px 0;
   }
 
   /* All containers full width, stacked.
